sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:10: error: reassignment to val
        j=j+1
         ^